# minesweeper

./: .gitignore  README.md  scanmines.html  scanmines.py
cpp-minesweeper/: CMakeLists.txt  README.md  build_and_run_msys2.bat  main.cpp
cpp-minesweeper/qt-minesweeper/: CMakeLists.txt  README.md  main.cpp
